<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_User"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/userprofile" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/saved"
            android:title="@string/menu_saved" />

        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/shopping"
            android:title="@string/menu_shopping" />

        <item
            android:id="@+id/nav_battery"
            android:icon="@drawable/battery"
            android:title="@string/menu_battery" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>