<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.recipefinder.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_showDishDetail"
            app:destination="@id/showDishDetail" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.recipefinder.ui.gallery.GalleryFragment"
        android:label="@string/menu_saved"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_battery"
        android:name="com.example.recipefinder.ui.battery.BatteryFragment"
        android:label="@string/menu_battery"
        tools:layout="@layout/fragment_battery" />
    <fragment
        android:id="@+id/splashScreen"
        android:name="com.example.recipefinder.ui.splashscreen.SplashScreen"
        android:label="fragment_splash_screen"
        tools:layout="@layout/fragment_splash_screen" >
        <action
            android:id="@+id/action_splashScreen_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/login"
        android:name="com.example.recipefinder.ui.login.Login"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/showDishDetail"
        android:name="com.example.recipefinder.ui.showdetail.ShowDishDetail"
        android:label="fragment_show_dish_detail"
        tools:layout="@layout/fragment_show_dish_detail" >
    </fragment>
    <fragment
        android:id="@+id/nav_User"
        android:name="com.example.recipefinder.ui.userprofile.UserProfileFragment"
        android:label="@string/userprofile"
        tools:layout="@layout/fragment_user_profile" />
</navigation>