<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splashscreen.SplashScreen">

    <ImageView
        android:id="@+id/chief"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/chief"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/Slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/chief"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/Slogan"
        android:textColor="@color/black"
        android:fontFamily="@font/logofont"
        android:textSize="30sp"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corners_background"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/getStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getstart"
            android:padding="5dp"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>